--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
 /*  your css code here. If applicable */
+#i1{
+	width:500px;
+	height:300px;
+}
+#col1{
+	width:200px
+}
+#col2{
+	width:600px;
+}
+#col3{
+	width:200px;
+}
